--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
+    <!-- target container, place as argument inside reactDom.render() -->
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
